force-app/main/default/objects/Flow_Test__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Flow type</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record-Triggered</fullName>
            </value>
            <value>
                <fullName>Screen Flow</fullName>
            </value>
            <value>
                <fullName>Auto-Launched</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>