force-app/main/default/objects/Flow_Test__c/fields/Last_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Date__c</fullName>
    <label>Last Run Date</label>
    <summarizedField>Flow_Test_Result__c.Run_Date_Time__c</summarizedField>
    <summaryForeignKey>Flow_Test_Result__c.Flow_Test__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>