force-app/main/default/objects/Flow_Test__c/fields/Last_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Status__c</fullName>
    <formula>IF(
  Total_Runs__c = 0, &quot;Not Run&quot;,
  IF(
    Fail_Count__c &gt; 0, &quot;Failed&quot;,
    IF(
      (Total_Runs__c - Passed_Count__c - Fail_Count__c ) &gt; 0, &quot;Error&quot;,
      IF(
        Passed_Count__c = Total_Runs__c, &quot;Passed&quot;,
        &quot;In Progress&quot;
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>logic to display text like “Passed / Failed”</inlineHelpText>
    <label>Last Status</label>
    <type>Text</type>
</CustomField>