force-app/main/default/objects/Flow_Test__c/fields/Pass_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pass_Rate__c</fullName>
    <formula>IF(Total_Runs__c &gt; 0, (Passed_Count__c / Total_Runs__c) * 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>calculates your Flow test success percentage.</inlineHelpText>
    <label>Pass Rate (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>