force-app/main/default/objects/Flow_Test__c/fields/Passed_Count__c.field-meta.xml
<CustomField>
    <fullName>Passed_Count__c</fullName>
    <label>Passed Count</label>
    <summaryFilterItems>
        <field>Flow_Test_Result__c.Status__c</field>
        <operation>equals</operation>
        <value>Passed</value>
    </summaryFilterItems>
    <summaryForeignKey>Flow_Test_Result__c.Flow_Test__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>