force-app/main/default/objects/Flow_Test__c/fields/Total_Runs__c.field-meta.xml
<CustomField>
    <fullName>Total_Runs__c</fullName>
    <label>Total Runs</label>
    <summaryForeignKey>Flow_Test_Result__c.Flow_Test__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>